--- a/index.html
+++ b/index.html
@@ -8,17 +8,20 @@
   <meta name="CocoaVersion" content="1404.47">
   <style type="text/css">
     p.p1 {margin: 0.0px 0.0px 0.0px 0.0px; font: 12.0px Verdana}
-    p.p2 {margin: 0.0px 0.0px 0.0px 0.0px; font: 12.0px Verdana; color: #000000; -webkit-text-stroke: #000000}
-    span.s1 {color: #000000; -webkit-text-stroke: 0px #000000}
-    span.s2 {font-kerning: none}
+    p.p2 {margin: 0.0px 0.0px 0.0px 0.0px; font: 12.0px Verdana; min-height: 15.0px}
+    p.p3 {margin: 0.0px 0.0px 0.0px 0.0px; font: 12.0px Times; color: #000000; -webkit-text-stroke: #000000; min-height: 14.0px}
+    span.s1 {font-kerning: none}
   </style>
 </head>
 <body>
 <p class="p1">&lt;html&gt;</p>
-<p class="p1">&lt;head&gt;&lt;/head&gt;</p>
+<p class="p2"><br></p>
 <p class="p1">&lt;body&gt;</p>
-<p class="p2"><span class="s1">&lt;i&gt;</span><span class="s2">Hello World &lt;/i&gt;</span></p>
-<p class="p2"><span class="s2">&lt;/body&gt;</span></p>
-<p class="p2"><span class="s2">&lt;/html&gt;</span></p>
+<p class="p1">Blah blah blah</p>
+<p class="p1">&lt;/body&gt;</p>
+<p class="p2"><br></p>
+<p class="p1">&lt;/html&gt;</p>
+<p class="p3"><span class="s1"></span><br></p>
+<p class="p3"><span class="s1"></span><br></p>
 </body>
 </html>
